# SGGW-Programowanie_w_Pythonie

./: .gitignore  pyproject.toml
PWP1_Cwiczenie/: main.py  missing_values.csv  values.csv
PWP2_Cwiczenie_1/: PWP2_cw_1.py  test_FileWriter2
PWP2_Cwiczenie_2/: PWP2_cw_2.py  main.py  test.db
PWP2_Cwiczenie_2/alembic/: env.py
PWP2_Cwiczenie_2/alembic/versions/: 2a2001b63f32_add_subject_table_and_many_to_many_.py  4819c765ddd0_initial_migration.py
