[project]
name = "programowanie-1"
version = "0.1.0"
description = ""
authors = [
    {name = "tomaszwolk",email = "wolk.tomasz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "alembic (>=1.17.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "programowanie_1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
